<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlowerCollection">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flowers"
        android:layout_width="match_parent"
        android:layout_height="678dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noFlowerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You have no flowers :("
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/flowers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>