...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlowerDisplay">

    <Button
        android:id="@+id/deleteFlowerBttn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/previewFlowerDisplay"
...
